@startuml IPAM Database Schema

' Styling
skinparam class {
    BackgroundColor White
    ArrowColor #2688d4
    BorderColor #2688d4
}

' Classes
class Region {
    +id: int
    +name: str
    +slug: str
    +parent_id: int
    +description: str
    +created_at: datetime
}

class SiteGroup {
    +id: int
    +name: str
    +slug: str
    +parent_id: int
    +description: str
    +created_at: datetime
}

class Site {
    +id: int
    +name: str
    +slug: str
    +status: str
    +region_id: int
    +site_group_id: int
    +latitude: float
    +longitude: float
    +address: str
    +created_at: datetime
}

class Location {
    +id: int
    +name: str
    +slug: str
    +site_id: int
    +parent_id: int
    +status: str
    +description: str
    +created_at: datetime
}

class VRF {
    +id: int
    +name: str
    +rd: str
    +enforce_unique: bool
    +description: str
    +created_at: datetime
}

class RIR {
    +id: int
    +name: str
    +slug: str
    +description: str
    +created_at: datetime
}

class Aggregate {
    +id: int
    +prefix: str
    +rir_id: int
    +date_added: datetime
    +description: str
}

class Role {
    +id: int
    +name: str
    +slug: str
    +description: str
}

class Prefix {
    +id: int
    +prefix: str
    +vrf_id: int
    +aggregate_id: int
    +role_id: int
    +site_id: int
    +status: str
    +description: str
    +created_at: datetime
}

class IPRange {
    +id: int
    +start_address: str
    +end_address: str
    +prefix_id: int
    +vrf_id: int
    +status: str
    +description: str
    +created_at: datetime
}

class IPAddress {
    +id: int
    +address: str
    +vrf_id: int
    +prefix_id: int
    +status: str
    +description: str
    +created_at: datetime
}

' Relationships
Region "1" *-- "*" Region : parent
Region "1" *-- "*" Site : sites

SiteGroup "1" *-- "*" SiteGroup : parent
SiteGroup "1" *-- "*" Site : sites

Site "1" *-- "*" Location : locations
Site "1" *-- "*" Prefix : prefixes

Location "1" *-- "*" Location : parent

VRF "1" *-- "*" Prefix : prefixes
VRF "1" *-- "*" IPAddress : ip_addresses
VRF "1" *-- "*" IPRange : ip_ranges

RIR "1" *-- "*" Aggregate : aggregates

Aggregate "1" *-- "*" Prefix : prefixes

Role "1" *-- "*" Prefix : prefixes

Prefix "1" *-- "*" IPAddress : ip_addresses
Prefix "1" *-- "*" IPRange : ip_ranges

@enduml
